[workspace]
resolver = "2"
members = ["app", "entity", "migration"]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Cameron <cameron@drivenow.com.au>"]

[workspace.dependencies]

[patch.crates-io]
# sqlx = { path = "../sqlx"}
sqlx = { git = "https://github.com/cameronbraid/sqlx", branch = "decimal_compatibility_lenient" }

