[package]
name = "app"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "*", features = [ "sqlx-mysql", "runtime-tokio", "macros", "with-chrono", "with-rust_decimal", "debug-print", "with-bigdecimal" ] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time","full"] }
migration = { path = "../migration" }
entity = { path = "../entity" }
color-eyre = "0.6"
rust_decimal = { version = "1.28.0", features = ["serde-float"] }
rust_decimal_macros = "1.28.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "valuable", "fmt", "std"] }
log = "*"
sqlx = { version = "*", features = [ "runtime-tokio", "rust_decimal", "bigdecimal" ] }

mysql = { version = "*", default-features = false, features = ["minimal", "derive"] }
mysql_common = { version = "*", default-features = false, features = ["rust_decimal"]}
