[package]
name = "entity"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono", "with-rust_decimal", "debug-print" ] }

[lib]
name = "entity"
path = "src/lib.rs"
